--- a/Task 1/SKlearnLogistic.ipynb
+++ b/Task 1/SKlearnLogistic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6156f2e6-1df3-42b2-b4b9-5b23d9fd3a76",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "0b719d6b-772b-4770-9b55-eef748fc9ca3",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_20488\\481440178.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_18188\\481440178.py:5: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df.replace({\n"
      ]
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "3fd8ecb1-e51d-42f4-9bb0-7e9a8eba737b",
    "metadata": {},
    "outputs": [
@@ -56,28 +56,20 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression Weights:\n",
-      " [-1.04693469e+00 -2.62308442e+00 -3.87332111e-02 -3.16388238e-01\n",
-      " -8.80937113e-02  2.09306518e-03  2.21785753e-01]\n",
-      "Logistic Regression Bias: 4.432363003395943\n"
+      " [-1.08238413e+00 -2.73290363e+00 -3.95984721e-02 -3.27501125e-01\n",
+      " -9.92004449e-02  1.92429035e-03  2.23594851e-01]\n",
+      "Logistic Regression Bias: 4.615263641168638\n"
      ]
     }
    ],
    "source": [
     "X = df.drop(['Survived'], axis=1)\n",
     "Y = df['Survived']\n",
-    "log_reg = LogisticRegression(max_iter=10000) \n",
+    "log_reg = LogisticRegression(max_iter=10000, penalty=None,solver='lbfgs') \n",
     "log_reg.fit(X, Y)\n",
     "print(\"Logistic Regression Weights:\\n\", log_reg.coef_[0])\n",
     "print(\"Logistic Regression Bias:\", log_reg.intercept_[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "462e21a9-b914-4d67-98a3-19657c0ddaf8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
