--- a/Task 3/MLP_from_Pytorch.ipynb
+++ b/Task 3/MLP_from_Pytorch.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "345c7d85",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
     "# Remove trailing dot in test labels\n",
     "test_df[\"income\"] = test_df[\"income\"].str.replace(\".\", \"\", regex=False)\n",
     "\n",
-    "# Combine (optional but common)\n",
+    "# Combining for one hot encoding\n",
     "df = pd.concat([train_df, test_df], axis=0)\n",
     "\n",
     "# Target\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e6fa57b7",
    "metadata": {},
    "outputs": [],
@@ -83,22 +83,23 @@
     ")\n",
     "\n",
     "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
+    "X_train = scaler.fit_transform(X_train) # fit means learns mean and std from trainign data only and uses it on test data\n",
     "X_test = scaler.transform(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "55d2cfbc",
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
     "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
-    "\n",
+    "# tensors are arrays only but they allow for work to shift to gpu and track operations and can compute gradients\n",
     "y_train = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)\n",
-    "y_test = torch.tensor(y_test, dtype=torch.float32).view(-1, 1)\n"
+    "y_test = torch.tensor(y_test, dtype=torch.float32).view(-1, 1)\n",
+    "# Converts shape from (N,) → (N, 1)"
    ]
   },
   {
