--- a/Task 5/The_Office_Generator.ipynb
+++ b/Task 5/The_Office_Generator.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-28T15:27:44.434287Z",
@@ -88,7 +88,7 @@
     "vocab_size = len(chars)\n",
     "print(\"Vocabulary size:\", vocab_size)\n",
     "\n",
-    "char2idx = {ch: i for i, ch in enumerate(chars)}\n",
+    "char2idx = {ch: i for i, ch in enumerate(chars)} # dictionary mapping\n",
     "idx2char = {i: ch for i, ch in enumerate(chars)}\n",
     "\n",
     "text_encoded = np.array([char2idx[c] for c in text])\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-28T15:29:35.455287Z",
@@ -131,7 +131,7 @@
     "train_dataset, val_dataset = torch.utils.data.random_split(dataset, [train_size, val_size])\n",
     "\n",
     "batch_size = 128\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False, drop_last=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, drop_last=True)"
    ]
   },
