--- a/Task 5/Weather_Forecasting.ipynb
+++ b/Task 5/Weather_Forecasting.ipynb
@@ -2,55 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-27T17:19:29.158421Z",
-     "iopub.status.busy": "2026-01-27T17:19:29.157947Z",
-     "iopub.status.idle": "2026-01-27T17:19:29.166050Z",
-     "shell.execute_reply": "2026-01-27T17:19:29.164796Z",
-     "shell.execute_reply.started": "2026-01-27T17:19:29.158392Z"
-    },
-    "trusted": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "latitude,longitude,elevation,utc_offset_seconds,timezone,timezone_abbreviation\n",
-      "\n",
-      "13.321617,74.79452,97.0,19800,Asia/Kolkata,GMT+5:30\n",
-      "\n",
-      "\n",
-      "\n",
-      "time,temperature_2m_mean (Â°C),precipitation_sum (mm),shortwave_radiation_sum (MJ/mÂ²),apparent_temperature_mean (Â°C),wind_speed_10m_max (km/h),et0_fao_evapotranspiration (mm),sunshine_duration (s),wind_direction_10m_dominant (Â°),pressure_msl_mean (hPa),cloud_cover_mean (%),dew_point_2m_mean (Â°C),soil_moisture_0_to_7cm_mean (mÂ³/mÂ³)\n",
-      "\n",
-      "2011-01-04,24.7,0.00,19.69,27.7,17.4,4.09,36798.94,325,1009.7,70,20.4,0.278\n",
-      "\n",
-      "2011-01-05,25.4,0.00,17.77,28.5,15.9,3.91,36494.80,309,1008.7,85,20.4,0.276\n",
-      "\n",
-      "2011-01-06,26.2,0.00,19.31,28.8,18.4,4.45,36924.74,319,1008.7,61,19.4,0.273\n",
-      "\n",
-      "2011-01-07,25.6,0.00,20.26,28.0,15.6,4.52,37417.72,178,1008.6,12,18.6,0.270\n",
-      "\n",
-      "2011-01-08,25.2,0.00,20.29,28.2,15.1,4.38,37473.21,313,1008.3,29,20.0,0.268\n",
-      "\n",
-      "2011-01-09,25.2,0.00,20.82,28.4,18.3,4.49,37701.15,297,1008.0,52,20.0,0.266\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "with open(\"manipal_atmospherics_df.csv\", \"r\") as f:\n",
-    "    for i in range(10):\n",
-    "        print(f.readline())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T17:28:35.423907Z",
@@ -63,6 +15,7 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "df = pd.read_csv(\"manipal_atmospherics_df.csv\",\n",
     "    skiprows=3\n",
     ")"
@@ -147,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-27T18:18:16.157388Z",
@@ -214,10 +167,10 @@
     "    X_val, y_val     = make_sequences(val_x, val_y, window)\n",
     "    X_test, y_test   = make_sequences(test_x, test_y, window)\n",
     "\n",
-    "    input_size = X_train.shape[2]\n",
-    "    output_size = y_train.shape[1]\n",
+    "    input_size = X_train.shape[2] # [len(x)-window, window, number of input features] \n",
+    "    output_size = y_train.shape[1] # [len(x)-window, number of output features]\n",
     "\n",
-    "    class SequenceModel(nn.Module):\n",
+    "    class SequenceModel(nn.Module): # nn.Module is super class allows for everything we are using here model.eval,parameters etc\n",
     "        def __init__(self, model_type, input_size, hidden, num_layers, output_size, bidirectional, dropout):\n",
     "            super().__init__()\n",
     "            if model_type == \"LSTM\":\n",
@@ -231,9 +184,12 @@
     "            direction_factor = 2 if bidirectional else 1\n",
     "            self.fc = nn.Linear(hidden * direction_factor, output_size)\n",
     "        \n",
+    "\n",
+    "        # in pytorch there is no seperate output layer, the output and the hidden state layer is treated as the same so the\n",
+    "        # fc layer we are adding here it itself is the output layer\n",
     "        def forward(self, x):\n",
-    "            out, _ = self.rnn(x)\n",
-    "            return self.fc(out[:, -1, :])\n",
+    "            out, _ = self.rnn(x) # out shape = (batch_size, sequence_length, hidden_size * directions), it is the a<t>s of all sequences and _ is the final hidden state only a<Ty>\n",
+    "            return self.fc(out[:, -1, :]) # all sequences that is entire batch, sequence's last time output, all hidden unit nodes ka values\n",
     "\n",
     "    model = SequenceModel(model_type, input_size, hidden, num_layers, output_size, bidirectional, dropout)\n",
     "\n",
@@ -244,7 +200,7 @@
     "    for epoch in range(epochs):\n",
     "        model.train()\n",
     "        optimizer.zero_grad()\n",
-    "        pred = model(X_train)\n",
+    "        pred = model(X_train) # internal pytorch settings like __call__ require format to be this same happened in rnn and fc\n",
     "        loss = criterion(pred, y_train)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -270,7 +226,7 @@
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        test_pred = model(X_test)\n",
-    "    test_pred_np = y_scaler.inverse_transform(test_pred.numpy())\n",
+    "    test_pred_np = y_scaler.inverse_transform(test_pred.numpy()) # reversing the scaling y_scaler.inverse_transform\n",
     "    test_true_np = y_scaler.inverse_transform(y_test.numpy())\n",
     "\n",
     "    plt.figure(figsize=(14,5))\n",
