--- a/Task 5/The_Office_Generator.ipynb
+++ b/Task 5/The_Office_Generator.ipynb
@@ -119,7 +119,7 @@
     "        return len(self.data) - self.seq_length # if like 100 characters in data set and sequence length 10 u can start sequence at positions 0 to 90 \n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        x = self.data[idx: idx + self.seq_length]\n",
+    "        x = self.data[idx: idx + self.seq_length] # not pre storing all sequnces coz wastes memory\n",
     "        y = self.data[idx + 1: idx + self.seq_length + 1]\n",
     "        return torch.tensor(x, dtype=torch.long), torch.tensor(y, dtype=torch.long)\n",
     "\n",
@@ -131,13 +131,13 @@
     "train_dataset, val_dataset = torch.utils.data.random_split(dataset, [train_size, val_size])\n",
     "\n",
     "batch_size = 128\n",
-    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False, drop_last=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, drop_last=True)"
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True) # gradients become correlated, overfitting risk if no shuffling\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, drop_last=True) # drop last = true if total samples not divisible by 128"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-28T15:30:28.179527Z",
@@ -160,7 +160,7 @@
     "    def forward(self, x, hidden=None):\n",
     "        x = self.embedding(x)\n",
     "        if hidden is None:\n",
-    "            output, hidden = self.lstm(x)\n",
+    "            output, hidden = self.lstm(x) # output contains hidden state at each time step just like weather forecasting one, hidden is final a and c of each sequence\n",
     "        else:\n",
     "            output, hidden = self.lstm(x, hidden)\n",
     "        logits = self.fc(output)\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2026-01-28T15:31:00.302103Z",
@@ -265,11 +265,11 @@
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    total_loss = 0\n",
-    "    for x, y in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\"):\n",
-    "        x, y = x.to(device), y.to(device)\n",
+    "    for x, y in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\"): #tqdm to show progress\n",
+    "        x, y = x.to(device), y.to(device) # note that y was never embedded\n",
     "        optimizer.zero_grad()\n",
     "        logits, _ = model(x)\n",
-    "        loss = criterion(logits.view(-1, vocab_size), y.view(-1))\n",
+    "        loss = criterion(logits.view(-1, vocab_size), y.view(-1)) # logits is batchsize, sequence length, vocab size  y is just batchsize, sequence length whose value is integer which is index of currect word in vocab\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        total_loss += loss.item()\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.status.busy": "2026-01-28T15:52:16.957864Z",
@@ -307,17 +307,18 @@
     "def generate_script(model, seed_text, temperature=1.0, num_chars=500):\n",
     "    model.eval()\n",
     "    generated = seed_text\n",
-    "    input_seq = torch.tensor([char2idx[c] for c in seed_text], dtype=torch.long).unsqueeze(0).to(device)\n",
+    "    input_seq = torch.tensor([char2idx[c] for c in seed_text], dtype=torch.long).unsqueeze(0).to(device) # inital shape was (seedtext's length, ) after unsqueeze (0, len)\n",
     "    hidden = None\n",
     "    \n",
     "    for _ in range(num_chars):\n",
     "        logits, hidden = model(input_seq, hidden)\n",
-    "        logits = logits[:, -1, :] / temperature\n",
-    "        probs = torch.softmax(logits, dim=-1)\n",
-    "        next_idx = torch.multinomial(probs, num_samples=1).item()\n",
-    "        next_char = idx2char[next_idx]\n",
+    "        # model.forward is called - embedds, lstm gives output (hidden final memory), fc gives logits\n",
+    "        logits = logits[:, -1, :] / temperature # final output of sequences divided by temp, shape is (batch size, V) = (1, vocab size)\n",
+    "        probs = torch.softmax(logits, dim=-1) \n",
+    "        next_idx = torch.multinomial(probs, num_samples=1).item() # random sampling weighted by probability\n",
+    "        next_char = idx2char[next_idx] \n",
     "        generated += next_char\n",
-    "        input_seq = torch.tensor([[next_idx]], dtype=torch.long).to(device)\n",
+    "        input_seq = torch.tensor([[next_idx]], dtype=torch.long).to(device) # embedding layer will do the embedding, only giving one character but hidden layer holds context\n",
     "    \n",
     "    return generated\n"
    ]
